tests/build_fail/bseq_fail_hex_u8_overflow.rs
use bit_seq::bseq;

fn main() {
    let _: u8 = bseq!(0xfff);
}